z-index and ui bug fix

--- a/gui/src/components/Header/Header.module.scss
+++ b/gui/src/components/Header/Header.module.scss
@@ -5,6 +5,7 @@
   height: 3rem;
   position: relative;
   color: white;
+  z-index: 50;
   .header-left {
     width: 20rem;
     display: flex;
